BG color chnage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ Project:	    Selfer
 Version:        1.0.0
 
 Default Color   #f26c4f;
-Background Color  #020312;
+Background Color  #0E0D12;
 
 Body copy:		'Roboto', sans-serif; 14px;
 Headers:		'Roboto', sans-serif;
